--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         /* Wave Separator */
         .wave-separator {
             height: 200px;
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/website/main/waves1.png') center/cover;
+            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves1.jpg') center/cover;
             margin: 4rem 0;
             position: relative;
             overflow: hidden;
@@ -65,15 +65,15 @@
         }
 
         .wave-separator:nth-of-type(2) {
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/website/main/waves2.png') center/cover;
+            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves2.png') center/cover;
         }
 
         .wave-separator:nth-of-type(3) {
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/website/main/waves3.png') center/cover;
+            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves3.jpg') center/cover;
         }
 
         .wave-separator:nth-of-type(4) {
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/website/main/waves4.png') center/cover;
+            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves4.png') center/cover;
         }
 
         .wave-separator::before {
