--- a/index.html
+++ b/index.html
@@ -57,23 +57,15 @@
         /* Wave Separator */
         .wave-separator {
             height: 200px;
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves1.jpg') center/cover;
+            background: url('https://raw.githubusercontent.com/Tom-Kinstle/website/main/waves.jpg') center top/cover;
             margin: 4rem 0;
             position: relative;
             overflow: hidden;
             opacity: 0.6;
         }
 
-        .wave-separator:nth-of-type(2) {
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves2.png') center/cover;
-        }
-
-        .wave-separator:nth-of-type(3) {
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves3.jpg') center/cover;
-        }
-
-        .wave-separator:nth-of-type(4) {
-            background: url('https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/waves4.png') center/cover;
+        .wave-separator:nth-of-type(even) {
+            background: url('https://raw.githubusercontent.com/Tom-Kinstle/website/main/Impression_waves.png') center bottom/cover;
         }
 
         .wave-separator::before {
@@ -323,6 +315,48 @@
             .portfolio-grid {
                 grid-template-columns: 1fr;
             }
+
+            /* Mobile image sizing fixes */
+            .profile-img {
+                width: 280px;
+                height: 280px;
+            }
+
+            .thinker-img {
+                width: 280px;
+                height: 280px;
+            }
+
+            .wsr-img {
+                height: 150px;
+            }
+
+            .wave-separator {
+                height: 100px;
+            }
+
+            /* Adjust hero section for mobile */
+            .hero-text {
+                text-align: center;
+                margin-bottom: 2rem;
+            }
+
+            .hero-text p {
+                font-size: 1.1rem;
+            }
+
+            .hero-subtext {
+                font-size: 1rem;
+            }
+
+            /* Make personality card more mobile-friendly */
+            .personality-card {
+                padding: 1.5rem;
+            }
+
+            .mbti-text {
+                font-size: 0.85rem;
+            }
         }
     </style>
 </head>
@@ -494,8 +528,8 @@
             <div class="contact-links">
                 <a href="mailto:ThomasKinstle@gmail.com" class="contact-btn">Email</a>
                 <a href="https://www.linkedin.com/in/thomas-kinstle/" class="contact-btn" target="_blank">LinkedIn</a>
-                <a href="https://github.com/Tom-Kinstle/Data-Science" class="contact-btn" target="_blank">GitHub</a>
-                <a href="https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/main/resume_thomas_kinstle.pdf" class="contact-btn" target="_blank">Resume PDF</a>
+                <a href="https://github.com/Tom-Kinstle/Data_projects_TripleTen" class="contact-btn" target="_blank">GitHub</a>
+                <a href="https://raw.githubusercontent.com/Tom-Kinstle/website/main/Thomas_Kinstle_Resume.pdf" class="contact-btn" target="_blank">Resume PDF</a>
             </div>
         </div>
     </section>
