--- a/index.html
+++ b/index.html
@@ -641,6 +641,7 @@
             }
         });
     </script>
+        <div class="wave-separator"></div>
       <!-- Contact Section -->
     <section id="contact">
         <div class="container">
