--- a/index.html
+++ b/index.html
@@ -641,5 +641,37 @@
             }
         });
     </script>
+        <div class="wave-separator"></div>
+      <!-- Contact Section -->
+    <section id="contact">
+        <div class="container">
+            <h2>Let's Connect</h2>
+            <div class="contact-links">
+                <a href="mailto:ThomasKinstle@gmail.com" class="contact-btn">Email</a>
+                <a href="https://www.linkedin.com/in/thomas-kinstle/" class="contact-btn" target="_blank">LinkedIn</a>
+                <a href="https://github.com/Tom-Kinstle/Data-Science" class="contact-btn" target="_blank">GitHub</a>
+                <a href="https://raw.githubusercontent.com/Tom-Kinstle/website/main/resume_thomas_kinstle.pdf" class="contact-btn" target="_blank">Resume PDF</a>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- Game Section -->
+    <section id="game">
+        <div class="container">
+            <h2>Before you go, let's do some Exploratory Data Analysis!</h2>
+            <div class="game-container">
+                <iframe 
+                    src="https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/game/piman_upgraded_game.html" 
+                    width="100%" 
+                    height="600" 
+                    frameborder="0" 
+                    style="border: 2px solid #333; border-radius: 10px; background: #111;">
+                    <p>Your browser does not support iframes. <a href="https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/game/piman_upgraded_game.html" target="_blank">Click here to play the game</a></p>
+                </iframe>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
