--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
             <h2>Before you go, let's do some Exploratory Data Analysis!</h2>
             <div class="game-container">
                 <iframe 
-                    src="https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/game/piman_upgraded_game.html" 
+                    src="https://tom-kinstle.github.io/game/index.html" 
                     width="100%" 
                     height="600" 
                     frameborder="0" 
