--- a/index.html
+++ b/index.html
@@ -657,21 +657,23 @@
 
 
 
-    <!-- Game Section -->
-    <section id="game">
-        <div class="container">
-            <h2>Before you go, let's do some Exploratory Data Analysis!</h2>
-            <div class="game-container">
-                <iframe 
-                    src="https://tom-kinstle.github.io/game/index.html" 
-                    width="100%" 
-                    height="600" 
-                    frameborder="0" 
-                    style="border: 2px solid #333; border-radius: 10px; background: #111;">
-                    <p>Your browser does not support iframes. <a href="https://raw.githubusercontent.com/Tom-Kinstle/Data-Science/game/piman_upgraded_game.html" target="_blank">Click here to play the game</a></p>
-                </iframe>
-            </div>
+<!-- Game Section -->
+<section id="game">
+    <div class="container">
+        <h2>Before you go, let's do some Exploratory Data Analysis!</h2>
+        <div class="game-container">
+            <iframe 
+                src="https://tom-kinstle.github.io/game/" 
+                width="100%" 
+                height="600" 
+                frameborder="0" 
+                style="border: 2px solid #333; border-radius: 10px; background: #111;">
+                <p>Your browser does not support iframes. 
+                    <a href="https://tom-kinstle.github.io/game/" target="_blank">Click here to play the game</a>
+                </p>
+            </iframe>
         </div>
-    </section>
+    </div>
+</section>
 </body>
 </html>
