--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                         <span class="tech-tag">matplotlib</span>
                         <span class="tech-tag">seaborn</span>
                     </div>
-                    <a href="https://github.com/Tom-Kinstle/Data_projects_TripleTen/tree/main/car_sales_market_analysis" class="project-link">View Project →</a>
+                    <a href="https://tom-kinstle.github.io/Data_projects_TripleTen/" class="project-link">View Project →</a>
                 </div>
 
                 <div class="project-card">
