--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                         <span class="tech-tag">plotly</span>
                         <span class="tech-tag">statistics</span>
                     </div>
-                    <a href="https://github.com/Tom-Kinstle/Data_projects_TripleTen/tree/main/global_gamming" class="project-link">View Project →</a>
+                    <a href="https://github.com/Tom-Kinstle/Data_projects_TripleTen/blob/main/global_gamming/Global%20Gaming%20pdf.pdf" class="project-link">View Project →</a>
                 </div>
 
                 <div class="project-card">
