--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>I'm a data scientist with a background in logistics, healthcare operations, and defense, where I've worked on everything from A-10 jet engines in the Air Force to predictive analytics for MRAP vehicle readiness at the Defense Logistics Agency. My foundation in mission-critical environments taught me to approach data with purpose, precision, and adaptability.</p>
+                    <p>I'm a data scientist with a background in logistics, healthcare operations, and defense, where I've worked on everything from A-10 jet engines in the Air Force to logistical analytics for MRAP vehicle readiness at the Defense Logistics Agency. My foundation in mission-critical environments taught me to approach data with purpose, precision, and adaptability.</p>
                     
                     <p>After completing TripleTen's intensive data science program, I've honed a strong skill set in Python, machine learning, time series forecasting, and geospatial analysis. I've used these tools to explore complex questions—like how rideshare demand varies across Chicago neighborhoods, or how seismic activity can be modeled to inform policy planning.</p>
                     
@@ -507,7 +507,7 @@
             <div class="portfolio-grid">
                 <div class="project-card">
                     <h3>Car Sales and Marketing</h3>
-                    <p>Comprehensive analysis of automotive sales data to identify market trends, customer preferences, and optimization opportunities for marketing strategies.</p>
+                    <p>Analyzed 50,000+ car sales to identify optimal pricing strategies that help dealerships maximize revenue while reducing inventory time by understanding which vehicle features drive faster sales.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">pandas</span>
@@ -543,7 +543,7 @@
 
                 <div class="project-card">
                     <h3>Lift Taxi Time Series Forecasting</h3>
-                    <p>Time series analysis and forecasting model for ride-sharing demand prediction, enabling better resource allocation and pricing strategies.</p>
+                    <p>Built a demand forecasting system that helps taxi companies optimize driver allocation and reduce customer wait times by predicting peak hour taxi orders with 20% improved accuracy.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">time series</span>
