--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
                 <div class="project-card">
                     <h3>Global Gaming Marketing Strategy</h3>
-                    <p>Strategic analysis of global gaming market data to identify regional opportunities and optimize marketing spend across different demographics and platforms.</p>
+                    <p>Identified the key factors that predict top-selling video games, helping global publishers target games over $1 million in sales before launch.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">scikit-learn</span>
@@ -555,7 +555,7 @@
 
                 <div class="project-card">
                     <h3>Predictive Drilling Location Model</h3>
-                    <p>Geospatial analysis and machine learning model to identify optimal drilling locations for mining operations, maximizing yield potential.</p>
+                    <p>Built a machine learning model that identifies optimal oil drilling locations, enabling companies to maximize returns on $100M investments with 41% profit margins and $70M+ projected operating profit.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">geospatial</span>
