--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
                 <div class="project-card">
                     <h3>Predictive Drilling Location Model</h3>
-                    <p>Built a machine learning model that identifies optimal oil drilling locations, enabling companies to maximize returns on $100M investments with 41% profit margins and $70M+ projected operating profit.</p>
+                    <p>Designed a machine learning model that identifies optimal oil drilling locations, enabling companies to maximize returns on $100M investments with 41% profit margins and $70M+ projected operating profit.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">Python</span>
                         <span class="tech-tag">geospatial</span>
